--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "validator": "^13.12.0"
   }
 }
